test/testdata/string/times_string_negative_int_error.lox
print "hello" * -1; // error: cannot multiply 'string' by negative 'number'
